<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~ *Created by VrX on 6/9/23 20:49
  ~ *Copyright (c) 2023
  ~ *Last modified 5/9/23 21:56
  ~ */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/madera"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    app:layoutDescription="@xml/activity_main_scene">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:width="200dp"
            android:background="@drawable/btnnumerico"
            android:minHeight="48dp"
            android:text="@string/btnlevel"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/gridInf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridInf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_level">


            <Button
                android:id="@+id/btn_low"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/btnnumerico"
                android:text="@string/btnlow"
                android:textSize="22sp"
                app:layout_column="0"
                app:layout_row="0"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="655dp" />

            <Button
                android:id="@+id/btn_lowplus"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/btnnumerico"
                android:text="@string/btnlowplus"
                android:textSize="22sp"
                app:layout_column="3"
                app:layout_row="0"
                tools:ignore="TextSizeCheck"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="655dp" />

            <Button
                android:id="@+id/btn_medium"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/btnnumerico"
                android:text="@string/btnmedium"
                android:textSize="22sp"
                app:layout_column="0"
                app:layout_row="1"
                tools:ignore="TextSizeCheck"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="655dp" />

            <Button
                android:id="@+id/btn_mediumplus"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/btnnumerico"
                android:text="@string/btnmediumplus"
                android:textSize="22sp"
                app:layout_column="3"
                app:layout_row="1"
                tools:ignore="TextSizeCheck"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="655dp" />

            <Button
                android:id="@+id/btn_high"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/btnnumerico"
                android:text="@string/btnhigh"
                android:textSize="22sp"
                app:layout_column="0"
                app:layout_row="2"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="655dp" />

            <Button
                android:id="@+id/btn_highplus"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/btnnumerico"
                android:text="@string/btnhighplus"
                android:textSize="22sp"
                app:layout_column="3"
                app:layout_row="2"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="655dp" />


        </androidx.gridlayout.widget.GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>